Update: Handler Submit

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
                 <input type="hidden" name="form-name" value="scores">
                 
                 <h3 id="resultMessage" style="margin-bottom: 20px;">¡Buen trabajo!</h3>
-
-                <input type="hidden" name="nombre" id="hiddenNameInput">
-                <input type="hidden" name="puntaje" id="hiddenScoreInput">
+                <label type="hidden" name="nombre" id="hiddenNameInput">
+                <label type="hidden" name="puntaje" id="hiddenScoreInput">
 
                 <button type="submit" class="btn primary-btn" style="animation: none; margin-bottom: 15px;">Guardar en el Ranking</button>
             </form>
