Update: Handle Score Submit

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div id="finalScore" class="final-score-box">1,000,000</div>
             </div>
 
-            <form id="scoreForm" name="scores" method="POST" netlify-honeypot="bot-field" style="margin-bottom: 20px;" netlify>
+            <form id="scoreForm" name="scores" method="POST" data-netlify="true netlify-honeypot="bot-field" style="margin-bottom: 20px;">
                 <p class="hidden">
                     <label>
                     Don’t fill this out if you’re human: <input name="bot-field" type="text" />
