Fix: Save Score Button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <input type="hidden" name="nombre" id="hiddenNameInput">
                 <input type="hidden" name="puntaje" id="hiddenScoreInput">
 
-                <button type="submit" class="btn primary-btn" style="animation: none; margin-bottom: 15px;">Guardar en el Ranking</button>
+                <button type="submit" id="saveScoreButton" class="btn primary-btn" style="animation: none; margin-bottom: 15px;">Guardar en el Ranking</button>
             </form>
             
             <button id="playAgainButton" class="btn primary-btn">Jugar de nuevo</button>
