--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Content Security Policy para prevenir XSS -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self'; form-action 'self' https://*.netlify.app; base-uri 'self'; frame-ancestors 'none';">
     <title>¿Quién quiere ser Proactivo?</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +14,7 @@
         <div id="startScreen" class="screen active">
             <h1>¿QUIÉN QUIERE SER PROACTIVO?</h1>
             <div class="player-input-container">
-                <input type="text" id="playerNameInput" placeholder="Escribe tu nombre para empezar" required>
+                <input type="text" id="playerNameInput" placeholder="Escribe tu nombre para empezar" required maxlength="50" autocomplete="off" spellcheck="false">
             </div>
             <button id="startButton" class="btn primary-btn">Empezar!</button>
         </div>
